Closed Bug 606209 Opened 15 years ago Closed 15 years ago

ssl_PushIOLayer does not handle failure from PR_CallOnce

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: coverity)

Attachments

(1 file)

2169 ssl_PushIOLayer(sslSocket *ns, PRFileDesc *stack, PRDescIdentity id) 2170 { 2171 PRFileDesc *layer = NULL; 2172 PRStatus status; 2173 2174 if (!ssl_inited) { 2175 PR_CallOnce(&initIoLayerOnce, &ssl_InitIOLayer); 2176 } Coverity complains that you didn't check for failure from PR_CallOnce
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #486307 - Flags: review?(nelson)
Comment on attachment 486307 [details] [diff] [review] patch r=nelson
Attachment #486307 - Flags: review?(nelson) → review+
nelson: what magic do i need to get someone to commit this?
Keywords: checkin-needed
Bug 606209 ssl_PushIOLayer does not handle failure from PR_CallOnce Patch contributed by timeless@mozdev.org, r=nelson Checking in sslsock.c; new revision: 1.69; previous revision: 1.68
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: