Bug 606209 ssl_PushIOLayer does not handle failure from PR_CallOnce Patch contributed by timeless@mozdev.org, r=nelson